--- a/topics/jvm/Understanding_The_JVM/第七章 虚拟机类的加载机制.md
+++ b/topics/jvm/Understanding_The_JVM/第七章 虚拟机类的加载机制.md
@@ -212,3 +212,78 @@ public static final int value = 123;
 
 ### 7.3.4 解析
 
+解析阶段是虚拟机将常量池内的符号引用替换为直接引用的过程。
+
+符号引用（Symbolic References）：符号引用以一组符号来描述所引用的目标，符号可以是任何形式的字面量，只要使用时能无歧义地定位到目标即可。符号引用与虚拟机实现的内存布局无关，引用的目标并不一定已经加载到内存中。而且各虚拟机的内存布局实现可能并不相同，但符号引用的定义必须是一致的，这个明确定义在 Java 虚拟机规范的 Class 文件格式中。
+
+直接引用（Direct References）：直接引用可以是直接指向目标的指针、相对偏移量或是一个能间接定位到目标的句柄。直接引用和虚拟机实现的内存布局相关，所以在不同的虚拟机上同一个符号引用翻译出来的直接引用一般不会相同。如果有了直接引用，那引用的目标必定已经在内存中存在。
+
+虚拟机规范并未规定解析阶段的具体时间，只要求在执行 16 个操作符号引用的字节码指令之前对符号引用进行解析。至于实在类被加载器加载时就对常量池中的符号引用进行解析还是等到一个符号引用将要被使用前才去解析，取决于虚拟机自己的实现。
+
+16 个操作符号引用的字节码包括：
+
+anewarray、checkcast、getfield、getstatic、instanceof、invokedynamic、invokeinterface、invokespecial、invokestatic、invokevirtual、ldc、ldc_w、multianewarray、new、putfield、putstatic
+
+对同一个符号引用进行多次解析请求是很常见的，除 invokedynamic 指令之外，虚拟机实现可以对第一次解析的结果进行缓存从而避免重复解析。
+
+虚拟机需要保证在同一个实体中，除 invokedynamic 指令之外，如果一个符号引用之前已经被成功解析过，那么后续的解析请求也应当一直成功；繁殖，如果第一次解析失败了，那么其他指令对这个符号的解析请求也应当收到相同的异常。
+
+invokedynamic 指令的本来目的就是用于动态语言支持，它所对应的引用称为“动态调用点限定符”（Dynamic Call Site Specifier），这里“动态”的含义就是必须等到程序实际运行到这条指令的时候才能进行解析。
+
+解析动作主要针对类或接口、字段、类方法、接口方法、方法类型、方法句柄和调用点限定符 7 类符号引用进行，和常量池的常量类型对应如下图所示：
+
+| 符号引用类型 | 常量类型                         |
+| ------------ | -------------------------------- |
+| 类或接口     | CONSTANT_Class_info              |
+| 字段         | CONSTANT_Fieldref_info           |
+| 类方法       | CONSTANT_Methodref_info          |
+| 接口方法     | CONSTANT_InterfaceMethodref_info |
+| 方法类型     | CONSTANT_MethodType_info         |
+| 方法句柄     | CONSTANT_MethodHandle_info       |
+| 调用点限定符 | CONSTANT_InvokeDynamic_info      |
+
+## 7.4 类加载器
+
+虚拟机设计团队把类加载阶段中的“通过一个类的全限定名来获取描述此类的二进制字节流”这个动作放到 Java 虚拟机外部去实现，以便让应用程序自己决定如何去获取所需要的类。实现这个动作的代码模块称为“类加载器”。
+
+类加载器在类层次划分、OSGi、热部署、代码加密等领域大放异彩，是 Java 技术体系中一块重要的基石。
+
+### 7.4.1 类与类加载器
+
+类加载器虽然只用于实现类的加载动作，但它在 Java 程序中起到的作用却远远不限于类加载阶段。对于任意一个类，都需要由加载它的类加载器和这个类本身一同确立其在 Java 虚拟机中的唯一性，每一个类加载器都有其独立的类命名空间。更通俗的表达方式是：比较两个类是否“相等”，只有在这两个类是由同一个类加载器加载的前提下才有意义，不同类加载器即使加载同一个 Class 文件，得到的类也必定不相等。
+
+这里所指的“相等”，包括代表类的 Class 对象的 equal() 方法、isAssignableFrom() 方法、isInstance() 方法的返回结果，也包括使用 instanceof 关键字做对象所属关系判定等情况。
+
+### 7.4.2 双亲委派模型
+
+从 Java 虚拟机角度来看，只存在两种不同的类加载器：一种是启动类加载器（Bootstrap ClassLoader），使用 C++ 实现，是虚拟机自身的一部分；另一种就是所有其他的类加载器，由 Java 实现，独立于虚拟机外部，并且全部继承自抽象类 java.lang.ClassLoader。
+
+从开发人员的角度来看，类加载器还可以划分得更细致一些，觉得部分 Java 程序都会用到以下 3 种系统提供的类加载器。
+
+启动类加载器（Bootstrap ClassLoader）：这个类加载器负责将存放在 <JAVA_HOME>\lib 目录中的，或者被 -Xbootclasspath 参数所指定的路径中的，并且是虚拟机识别的（仅按照文件名识别，如 rt.jar，名字不符合的类库即使放在 lib 目录中也不会被加载）类库加载到虚拟机内存中。启动类加载器无法被 Java 程序直接引用，用户在编写自定义类加载器时，如果需要把加载请求委派给启动类加载器，那直接使用 null 代替即可。
+
+扩展类加载器（Extension ClassLoader）：这个类加载器由 sun.misc.Launcher $ExtClassLoader 实现，它负责加载<JAVA_HOME>\lib\ext 目录中的，或者被 java.ext.dirs 系统变量所指定的路径中的所有类库，开发者可以直接使用扩展类加载器。
+
+应用程序类加载器（Application ClassLoader）：这个类加载器由 sun.misc.Launcher $App-ClassLoader 实现。由于这个类加载器是 ClassLoader 中的 getSystemClassLoader() 方法的返回值，所以一般也称为系统类加载器。它负责加载用户类路径（ClassPath）上所指定的类库，开发者可以直接使用这个类加载器，如果应用程序中没有自定义过自己的类加载器，一般情况下这个就是程序中的默认类加载器。
+
+我们的应用程序都是由这 3 中类加载器互相配合进行加载的，如果有必要，还可以加入自己定义的类加载器。这些类加载器之间的关系一般如图 7-2 所示。
+
+![7.2 classloader_parents_delegation_model](https://raw.githubusercontent.com/3rdyeah/3rdpics/master/picbed/7.2%20classloader_parents_delegation_model.png)
+
+<center>图 7-2 类加载器双亲委派模型</center>
+
+双亲委派模型要求，除了顶层的启动类加载器外，其余的类加载器都应当有自己的父加载器，但这里的父子关系一般都是以组合而不是继承的关系来实现，也就是说，子类加载器会先使用父类加载器，父类加载器无法加载时再调用自身去加载类。当然这并不是一个强制要求，而是 Java 设计者推荐给开发者的一种类加载器实现方式。
+
+双亲委派模型的工作过程是：
+
+1. 一个类加载器收到类加载请求
+2. 尝试将类加载请求委派给父类加载器去加载，父类加载器再委派给父类的父类，层层向上委派
+3. 父类加载器可以加载则由父类加载器加载，否则交给子类加载器自己加载。
+
+### 7.4.3 破坏双亲委派模型
+
+上面说过双亲委派模型不是强制要求，只是被 Java 设计者推荐使用。通常大部分 Java 类加载器都遵循这个要求，但到目前为止，双亲委派模型经历过 3 次较大规模的“被破坏”。
+
+第一次“被破坏”其实发生在双亲委派模型出现之前，即——JDK 1.2 发布之前。由于类加载器和抽象类 java.lang.ClassLoader 在 JDK 1.0 时代就已存在，所以面对已经存在的用户自定义的类加载器的实现代码，Java 设计者做了一些妥协，在 JDK 1.2 之后再 java.lang.ClassLoader 类中加了一个新的 protected 的方法 findClass()，在此之前，用户继承 java.lang.ClassLoader 的唯一目的是为了重写 loadClass() 方法，JDK 1.2 之后就不再提倡将代码卸载 loadClass() 方法中，而是在 findClass() 方法中实现自己的逻辑，这样写出来的代码就符合双亲委派模型了。
+
+第二次和第三次“被破坏”可以去搜索 JNDI 和 OSGi 的相关信息。
