--- a/topics/thinking/快速问答/网络相关.md
+++ b/topics/thinking/快速问答/网络相关.md
@@ -58,12 +58,13 @@ sequenceDiagram
 
 ## 常见协议默认端口号
 
-| ftp    | 21   |
-| ------ | ---- |
-| ssh    | 22   |
-| telnet | 23   |
-| http   | 80   |
-| https  | 443  |
+| 协议   | 端口号 |
+| ------ | ------ |
+| ftp    | 21     |
+| ssh    | 22     |
+| telnet | 23     |
+| http   | 80     |
+| https  | 443    |
 
 ## ping 命令使用的是什么协议
 
