--- a/topics/thinking/快速问答/网络相关.md
+++ b/topics/thinking/快速问答/网络相关.md
@@ -16,6 +16,7 @@
 sequenceDiagram
 title : 三次握手
 	note over client, server : CLOSED
+    note over server : LISTEN
     client ->> server : SYN=1, seq=x
     note over client : SYN_SENT
     server ->> client : SYN=1, seq=y, ACK=1, ack=x+1
@@ -23,6 +24,14 @@ title : 三次握手
     client ->> server : ACK=1, ack=y+1
     note over client, server : ESTABLISHED
 ```
+
+> LITSEN 监听状态
+>
+> SYN_SENT 同步已发送
+>
+> SYN_RCVD 同步已收到
+>
+> ESTABLISHED 已建立连接
 
 ```mermaid
 sequenceDiagram
@@ -40,9 +49,19 @@ sequenceDiagram
 	note over client, server : CLOSED
 ```
 
+> FIN_WAIT1 终止等待1
+>
+> CLOSE_WAIT 关闭等待
+>
+> FIN_WAIT2 终止等待2
+>
+> LAST_ACK 最后确认
+>
+> TIME_WAIT 时间等待
+
 ### TCP 与 UDP
 
-|          | TCP                                                  | UDP                                    |
+|          | TCP 可靠的、字节流服务                               | UDP 不可靠的、数据报服务               |
 | -------- | ---------------------------------------------------- | -------------------------------------- |
 | 面向     | 面向单一目标，面向连接的字节流协议                   | 可以面向多个目标，面向无连接的报文协议 |
 | 可靠性   | 可靠的，可以保证数据无差错、不重复、不丢失、按需到达 | 不可靠，只保证发送                     |
@@ -70,3 +89,8 @@ sequenceDiagram
 
 ICMP（Internet Control Message Protocol）Internet 控制消息协议
 
+
+
+## 分组交换
+
+ 
