--- a/topics/thinking/server/lucis 功能系统/任务系统.md
+++ b/topics/thinking/server/lucis 功能系统/任务系统.md
@@ -58,3 +58,10 @@ classDiagram
 
 除主线任务外，可以用通用任务信息类存储数据的新的任务类型都用继承 BranchTask 来做。如果是一些周期性循环任务，比如日常任务、跑环任务等，则继承 SpecialTask 来做。
 
+### 任务类型
+
+TaskType = ExecuteType + FinishType
+
+ExecuteType：NPC（去找NPC）、USE（使用物品）、POINT_ARRIVED（到达某一点）、MONSTER（找怪物）、NULL
+
+FinishType：ITEM（道具）、FUBEN（打副本）
