--- a/topics/thinking/q&a/多线程.md
+++ b/topics/thinking/q&a/多线程.md
@@ -1,4 +1,29 @@
-## 锁
+# 多线程
+
+## 线程状态
+
+- new
+- runable
+- blocked
+- wait
+- timed_wait
+- terminated
+
+## wait 和 sleep 有什么区别
+
+### 来自不同类
+
+wait -> Object
+
+Sleep -> Thread
+
+### 是否持有锁
+
+wait 会释放锁，恢复时重新申请
+
+sleep 会持有锁，其他线程等待
+
+## Lock（锁）
 
 ### 锁的 4 种状态
 
@@ -30,16 +55,27 @@ Java 虚拟机 在 JIT 编译时，优化调没有必要的锁，节省无意义
 
 ### synchronized 和 lock 的区别
 
-- synchronized 是一个关键字，它的实现在 jvm 层面上，而 lock 是一个接口
-- synchronized 发生异常时会自动释放锁，而 lock 不会
-- synchronized 的锁状态无法判断，lock 可以判断锁状态
-- synchronized 不可中断、非公平，lock 可中断、可公平
-- synchronzed 适合少量同步，lock 适合大量同步
+| synchronized               | lock                                 |
+| -------------------------- | ------------------------------------ |
+| 关键字                     | Java 类                              |
+| 无法判断锁状态             | 可以判断锁状态                       |
+| 自动释放锁                 | 手动释放锁                           |
+| 可重入、不可中断、非公平锁 | 可重入、可判断、可以自己设置是否公平 |
+| 适合少量代码               | 适合大量代码                         |
 
-## 怎么保证消息顺序
+### synchronized
 
-使用消息队列，并对消息的收发者使用 hash 分配消息的收发队列，同一个发送者或者接受者只从同一个队列收发消息
+### ReetrantLock
 
-## 如果客户端接受服务器返回的消息失败，无限尝试重发消息，怎么处理
+- NonfairSync（默认）：非公平锁，可以插队
+- FairSync：公平锁，顺序执行
 
-在服务器存储一个针对当前客户端的唯一消息 id，客户端初次连接返回给客户端，每次客户端向服务器发送消息都要带上这个唯一 id，每次服务器接到客户端消息后都要更新这个唯一 id 并返回给客户端
+## 虚假唤醒问题
+
+
+
+## ReadWriteLock
+
+readLock 和 writeLock 的阻塞关系
+
+写阻塞读写，读只阻塞写
