Q&A、xdb 中的概念.md

--- a/topics/thinking/q&a/多线程.md
+++ b/topics/thinking/q&a/多线程.md
@@ -2,12 +2,12 @@
 
 ## 线程状态
 
-- new
-- runable
-- blocked
-- wait
-- timed_wait
-- terminated
+- new 创建
+- runable 运行
+- blocked 阻塞
+- wait 等待
+- timed_wait 超时等待
+- terminated 终止
 
 ## wait 和 sleep 有什么区别
 
@@ -36,6 +36,8 @@ sleep 会持有锁，其他线程等待
 当一个线程访问代码快并获取锁对象时，会在对像头和栈帧中记录偏向锁的 threadID，以后再有线程获取这个代码快的锁的时候，需要比较当前线程的 threadID 和 java 对像头中的 threadID 是否一致，如果不一致，查看记录中的 threadID 所指的线程是否存活，如果没存活，则锁对象重置为无锁状态，新线程可以竞争上偏向锁；如果仍然存活，则根据该线程栈帧信息判断是否还需要继续持有这个锁，如果需要，则暂停旧线程，撤销偏向锁，升级为轻量锁，如果不需要继续持有该锁，则将锁设置为无所状态并重新偏向新的线程
 
 #### 轻量级锁的升级
+
+当一个线程持有一个对象的轻量级锁时，其他来获取对象的线程会通过自旋来消耗 CPU，当某个线程自旋超过一定次数之后，则会将轻量级锁升级为重量级锁，其他线程再来获取对象时，则会进入阻塞状态而不是自旋，此时把所有的控制权都交给操作系统。
 
 ### 锁粗化
 
