--- a/content/posts/q&a/多线程.md
+++ b/content/posts/q&a/多线程.md
@@ -8,26 +8,25 @@ draft = true
 
 ## 线程状态
 
-- new 创建
-- runable 运行
-- blocked 阻塞
-- wait 等待
-- timed_wait 超时等待
-- terminated 终止
+*   new 创建
+*   runable 运行
+*   blocked 阻塞
+*   wait 等待
+*   timed_wait 超时等待
+*   terminated 终止
 
 ## wait 和 sleep 有什么区别
 
-### 来自不同类
+| wait         | sleep       |
+| ------------ | ----------- |
+| 属于 Object 类  | 属于 Thread 类 |
+| 会释放锁，恢复时重新申请 | 会持有锁，其他线程等待 |
 
-wait -> Object
+## wait 和 notify
 
-Sleep -> Thread
+wait 会使当前线程进入等待状态，notify 会通知其他线程来获取锁
 
-### 是否持有锁
-
-wait 会释放锁，恢复时重新申请
-
-sleep 会持有锁，其他线程等待
+但并不是 notify 之后其他线程就可以直接拿到锁，而是要等到当前线程的同步块退出之后
 
 ## Lock（锁）
 
@@ -63,27 +62,68 @@ Java 虚拟机 在 JIT 编译时，优化调没有必要的锁，节省无意义
 
 ### synchronized 和 lock 的区别
 
-| synchronized               | lock                                 |
-| -------------------------- | ------------------------------------ |
-| 关键字                     | Java 类                              |
-| 无法判断锁状态             | 可以判断锁状态                       |
-| 自动释放锁                 | 手动释放锁                           |
+| synchronized  | lock               |
+| ------------- | ------------------ |
+| 关键字           | Java 类             |
+| 无法判断锁状态       | 可以判断锁状态            |
+| 自动释放锁         | 手动释放锁              |
 | 可重入、不可中断、非公平锁 | 可重入、可判断、可以自己设置是否公平 |
-| 适合少量代码               | 适合大量代码                         |
+| 适合少量代码        | 适合大量代码             |
+| 可升级           | 不存在升级              |
 
 ### synchronized
 
 ### ReetrantLock
 
-- NonfairSync（默认）：非公平锁，可以插队
-- FairSync：公平锁，顺序执行
+*   NonfairSync（默认）：非公平锁，可以插队
+
+*   FairSync：公平锁，顺序执行
+
+#### lock() 和 tryLock()
+
+*   lock() 表示加锁，如果加不到锁会等待直到加锁成功
+
+*   tryLock() 表示尝试枷锁，加不到锁会返回 false，后续逻辑由程序员自己实现
 
 ## 虚假唤醒问题
 
+虚假唤醒是指被唤醒的线程在执行逻辑的时候唤醒条件已经不成立了，通常是同时唤醒了多条线程，但只有一个线程能够拿到锁去继续逻辑，等执行完其他线程再拿到锁时，唤醒条件可能已经不成立了
 
+通常是逻辑写的有问题，比如条件判断使用了 if 而不是 while，所以只在第一次唤醒时进行了条件判断
 
 ## ReadWriteLock
 
 readLock 和 writeLock 的阻塞关系
 
 写阻塞读写，读只阻塞写
+
+## 线程池
+
+七个核心参数：
+
+*   corePoolSize 核心池大小
+
+    *   IO 密集，主要消耗磁盘性能，通常设为 2n（n 为 CPU 核心数量）
+    *   CUP 密集，主要消耗 CPU 性能，通常设为 n+1
+*   maxNumPoolSize 最大池大小
+*   keepAliveTime 线程生命周期
+*   timeUnit 时间单位
+*   workQueue 队列类型
+
+    *   ArrayBlockingQueue 需要指定大小，性能较差
+    *   LinkendBlockingQueue 不指定大小则默认为 Integer.MAX\_VALUE，性能较好
+    *   sychronousBlockingQueue 不保存任务，直接新建线程执行任务
+*   threadFactory 线程工厂
+*   RejectedExcutionHandler 拒绝策略
+
+    *   AbortProxy 丢弃并抛出异常
+    *   DiscardProxy 丢弃但不抛出异常
+    *   DiscardOldestProxy 对其最前面的任务，并重新添加新任务
+    *   CallRunsProxy 由调用线程（提交任务的线程）执行该任务
+
+## Runnable、Callable、Thread
+
+*   Runnable 接口，重新 run 方法，无返回值
+*   Callable 接口，重新 call 方法，有返回值，返回 FutureTask
+*   Thread  类
+
